--- a/vs/youngJSON/youngJSON.vcxproj
+++ b/vs/youngJSON/youngJSON.vcxproj
@@ -153,6 +153,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\test\test.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
