--- a/vs/youngJSON/youngJSON.vcxproj.filters
+++ b/vs/youngJSON/youngJSON.vcxproj.filters
@@ -30,4 +30,7 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\README.md" />
+  </ItemGroup>
 </Project>
